--- a/ProyectoFinalAp2/Pages/Consultas/C_Clientes.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Clientes.razor
@@ -170,7 +170,7 @@
         contador += pagina.pagina;
         contador = (contador >= cantidadDePaginas) ? 0 : contador;
 
-        if (filtro == 1)
+        if (filtro == 1 || filtro==0)
         {
             this.lista = ClientesBLL.GetList(p => true).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
         }
@@ -201,7 +201,7 @@
         }
         if(BuscarFecha)
         {
-            if (filtro == 1)
+            if (filtro == 1 || filtro==0)
             {
                 this.lista = ClientesBLL.GetList(p => true);
                 lista = lista.Where(f => f.Fecha.Date >= DesdeFecha.Date && f.Fecha.Date <= HastaFecha.Date).ToList();
@@ -222,64 +222,72 @@
     {
         try
         {
-            if (filtro == 0)
+            if (criterio == string.Empty)
             {
-                await JS.Confirmar("top-center", "info", "Aviso", "Debe seleccionar un filtro", false, 2000);
+                this.lista = ClientesBLL.GetList(c => true);
+                Paginar(c => true);
+                CargarParaExportar();
             }
             else
             {
-                switch (filtro)
+                if (filtro != 0)
                 {
-                    case 1: //Todos
-                        this.lista = ClientesBLL.GetList(c => true);
-                        Paginar(c => true);
+                    switch (filtro)
+                    {
+                        case 1: //Todos
+                            this.lista = ClientesBLL.GetList(c => true);
+                            Paginar(c => true);
+                            CargarParaExportar();
+                            break;
+                        case 2: //Id
+                            int ID = await GetId();
+                            this.lista = ClientesBLL.GetList(c => c.ClienteId == ID);
+                            Paginar(c => c.ClienteId == ID);
+                            CargarParaExportar();
+                            break;
+                        case 3: //nombre
+                            this.lista = ClientesBLL.GetList(f => f.Nombre == criterio);
+                            Paginar(f => f.Nombre == criterio);
+                            CargarParaExportar();
+                            break;
+                        case 4: //rnc
+                            this.lista = ClientesBLL.GetList(f => f.RNC == criterio);
+                            Paginar(f => f.RNC == criterio);
+                            CargarParaExportar();
+                            break;
+                        case 5: //direccion
+                            this.lista = ClientesBLL.GetList(f => f.Direccion == criterio);
+                            Paginar(f => f.Direccion == criterio);
+                            CargarParaExportar();
+                            break;
+                        case 6: //telefono
+                            this.lista = ClientesBLL.GetList(f => f.Telefono == criterio);
+                            Paginar(f => f.Telefono == criterio);
+                            CargarParaExportar();
+                            break;
+                        case 7: //email
+                            this.lista = ClientesBLL.GetList(f => f.Email == criterio);
+                            Paginar(f => f.Email == criterio);
+                            CargarParaExportar();
+                            break;
+                    }
+                    if (BuscarFecha == true)
+                    {
+                        lista = lista.Where(f => f.Fecha.Date >= DesdeFecha.Date && f.Fecha.Date <= HastaFecha.Date).ToList();
+                        Paginar(f => f.Fecha.Date >= DesdeFecha.Date && f.Fecha.Date <= HastaFecha.Date);
                         CargarParaExportar();
-                        break;
-                    case 2: //Id
-                        int ID = await GetId();
-                        this.lista = ClientesBLL.GetList(c => c.ClienteId == ID);
-                        Paginar(c => c.ClienteId == ID);
-                        CargarParaExportar();
-                        break;
-                    case 3: //nombre
-                        this.lista = ClientesBLL.GetList(f => f.Nombre == criterio);
-                        Paginar(f => f.Nombre == criterio);
-                        CargarParaExportar();
-                        break;
-                    case 4: //rnc
-                        this.lista = ClientesBLL.GetList(f => f.RNC == criterio);
-                        Paginar(f => f.RNC == criterio);
-                        CargarParaExportar();
-                        break;
-                    case 5: //direccion
-                        this.lista = ClientesBLL.GetList(f => f.Direccion == criterio);
-                        Paginar(f => f.Direccion == criterio);
-                        CargarParaExportar();
-                        break;
-                    case 6: //telefono
-                        this.lista = ClientesBLL.GetList(f => f.Telefono == criterio);
-                        Paginar(f => f.Telefono == criterio);
-                        CargarParaExportar();
-                        break;
-                    case 7: //email
-                        this.lista = ClientesBLL.GetList(f => f.Email == criterio);
-                        Paginar(f => f.Email == criterio);
-                        CargarParaExportar();
-                        break;
+                    }
+                    if (lista.Count() == 0)
+                    {
+                        await JS.Confirmar("top-center", "info", "Aviso", "No se ha encontrado clientes.", false, 2000);
+                    }
                 }
-                if (BuscarFecha == true)
+                else
                 {
-                    lista = lista.Where(f => f.Fecha.Date >= DesdeFecha.Date && f.Fecha.Date <= HastaFecha.Date).ToList();
-                    Paginar(f => f.Fecha.Date >= DesdeFecha.Date && f.Fecha.Date <= HastaFecha.Date);
-                    CargarParaExportar();
+                    await JS.Confirmar("top-center", "info", "Aviso", "Debe seleccionar un filtro", false, 2000);
                 }
-                if (lista.Count() == 0)
-                {
-                    await JS.Confirmar("top-center", "info", "Aviso", "No se ha encontrado clientes.", false, 2000);
-                }
-
-                CantidadCliente();
             }
+            CantidadCliente();
         }
         catch (Exception)
         {
@@ -290,7 +298,7 @@
 
     private void CargarParaExportar()
     {
-        if (filtro == 1)
+        if (filtro == 1 || filtro==0)
         {
             this.auxClienteLista = ClientesBLL.GetList(p => true);
         }
