--- a/ProyectoFinalAp2/Pages/Reportes/ReporteCategorias.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteCategorias.razor
@@ -60,7 +60,7 @@
 
     protected override void OnInitialized()
     {
-        Fecha = DateTime.Now.ToShortDateString();
+        Fecha = DateTime.Now.ToString("dd/MM/yyyy");
         lista = CategoriasBLL.GetList(c => true);
         CalcularTotal();
     }
