--- a/ProyectoFinalAp2/Pages/Reportes/ReporteClientes.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteClientes.razor
@@ -44,7 +44,7 @@
                             <td>@item.RNC</td>
                             <td>@item.Direccion</td>
                             <td>@item.Telefono</td>
-                            <td>@item.Fecha</td>
+                            <td>@item.Fecha.ToString("dd/MM/yyyy")</td>
                             <td>@item.Email</td>
                         </tr>
                     }
@@ -70,7 +70,7 @@
 
     protected override void OnInitialized()
     {
-        Fecha = DateTime.Now.ToShortDateString();
+        Fecha = DateTime.Now.ToString("dd/MM/yyyy");
         lista = ClientesBLL.GetList(c => true);
         CantidadCliente();
     }
