--- a/ProyectoFinalAp2/Pages/Registros/R_Marca.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_Marca.razor
@@ -65,7 +65,7 @@
 
     private void Nuevo()
     {
-        this.marca = new Marcas();
+        marca = new Marcas();
     }
 
     private async Task Buscar()
