--- a/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
@@ -2,6 +2,7 @@
 @page "/Registros/EntradaProductos/{iD:int}"
 @using ProyectoFinalAp2.Models
 @using ProyectoFinalAp2.Controllers
+@using ProyectoFinalAp2.BLL; 
 @using ProyectoFinalAp2.Data
 
 @inject IToastService toast
@@ -26,6 +27,18 @@
                 <label for="FECHA" class="ml-3 mr-3">Fecha</label>
                 <InputDate @bind-Value="entradaProductos.Fecha" class="form-control"></InputDate>
                 <ValidationMessage For="(() => entradaProductos.Fecha)"></ValidationMessage>
+            </div>
+
+            <label for="Proveedor">Proveedor</label>
+            <div class="form-group">
+                <select class="form-control" @bind="productos.MarcaiD" @onclick="CargarProveedor">
+                    <option value="" disabled selected>Seleccione un Proveedor</option>
+                    @foreach (var item in CargarComboProveedores())
+                    {
+                        <option value="@item.ProveedorId">@item.Nombre</option>
+                    }
+                </select>
+                <ValidationMessage For="(() => entradaProductos.ProveedorId)"></ValidationMessage>
             </div>
 
             <div class="form-row">
@@ -102,6 +115,7 @@
     public int iD { get; set; }
 
     Productos productos = new Productos();
+    Proveedor proveedor = new Proveedor();
     EntradaProductos entradaProductos = new EntradaProductos();
 
     //variables del detalle
@@ -119,6 +133,26 @@
         Nuevo();
         var result = Buscar();
         CargarCombo();
+    }
+
+    private void CargarProveedor()
+    {
+        try
+        {
+            proveedor = ProveedorBLL.Buscar(Convert.ToInt32(entradaProductos.ProveedorId));
+        }
+        catch (Exception ex)
+        {
+            toast.ShowError(ex.ToString(), "Error");
+        }
+    }
+
+    private List<Proveedor> CargarComboProveedores()
+    {
+        List<Proveedor> lista = new List<Proveedor>();
+        lista = ProveedorBLL.GetList(p => true);
+
+        return lista;
     }
 
     private void CargarProductos()
