--- a/ProyectoFinalAp2/Pages/Reportes/R_Marcas.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/R_Marcas.razor
@@ -61,7 +61,7 @@
 
     protected override void OnInitialized()
     {
-        Fecha = DateTime.Now.ToShortDateString();
+        Fecha = DateTime.Now.ToString("dd/MM/yyyy");
         lista = MarcasBLL.GetList(c => true);
         CalcularTotal();
     }
