--- a/ProyectoFinalAp2/Pages/Reportes/R_Productos.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/R_Productos.razor
@@ -62,7 +62,7 @@
 
     protected override void OnInitialized()
     {
-        Fecha = DateTime.Now.ToShortDateString();
+        Fecha = DateTime.Now.ToString("dd/MM/yyyy");
         Lista = ProductosBLL.GetList(e => true);
         CalcularTotal();
     }
