--- a/ProyectoFinalAp2/Pages/Reportes/R_Reorden.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/R_Reorden.razor
@@ -64,7 +64,7 @@
 
     protected override void OnInitialized()
     {
-        Fecha = DateTime.Now.ToShortDateString();
+        Fecha = DateTime.Now.ToString("dd/MM/yyyy");
         Reorden();
         CalcularTotal();
     }
